# N-Body-Simulator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/gui/: engine.rs
src/physics/: gravity.rs
src/terminal/: cli.rs
src/types/: nbodysystem.rs  particle.rs
tests/: orbit_integration.rs
