[package]
name = "n-body-simulator"
version = "0.2.0"
edition = "2024"
authors = ["Maksym Prymierov <primerovmax@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vecmath = "1.0.0"
rand = "0.9.2"
rayon = "1.10.0"
macroquad = "0.4.15"
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.47.0", features = ["sync", "rt-multi-thread", "rt", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
serde_json = "1.0.141"
tempfile = "3.23.0"
